--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,7 +2,7 @@
 	padding-left: 8px ;
 	padding-right: 8px ;
 }
-.nav1 {
+.nav1, .navbar-username {
 	color: #579BB4 !important ;
 	font-weight: 600;
 }
@@ -10,6 +10,13 @@
 	color: #bcd !important ;
 	font-weight: 600;
 }
-.navbar-username {
-	color: #eee; 
+
+a {
+    color: #ffffff;
+    text-decoration: underline;
+}
+ .logout-btn {
+    color: #fff;
+    background-color: #03256cff;
+    border-color: #03256cff;
 }
