--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .my-container {
-    
-   
-    min-height: max(100vh, 800px); /* Ensure footer is far enough down if the rest of the content takes up insufficient vertical space */
+    min-height: max(200vh, 800px);
+    /* Ensure footer is far enough down if the rest of the content takes up insufficient vertical space */
+
+    /* justify-content: space-around; */
+    /* margin: 0 auto; */
+    width: 100%;
+    /* padding: 0 20px; */
 }
