--- a/src/components/socialCards.css
+++ b/src/components/socialCards.css
@@ -1,9 +1,119 @@
+body {
+    background-color: #a7c7e7;
+    font-family: 'Roboto', sans-serif;
+}
+
 .social-cards {
+    width: 90vw;
     display: flex;
     flex-wrap: wrap;
-    column-width: 50%;
+    column-gap: 100px;
+    row-gap: 50px;
+    text-align: center;
+    padding-bottom: 30px;
+
 }
 
 .social-card {
-    width: 200px;
+    background-color: #1034a6;
+    width: 500px;
+    box-shadow: 0 0 10px 0 rgb(54, 10, 93);
 }
+
+.single-post {
+    min-height: 200px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: transparent;
+    row-gap: 10px;
+    border-radius: 10px;
+    color: aliceblue;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.comment-container {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+}
+
+.comment {
+    border: 1px solid black;
+    background-color: #dcdcdc;
+    border-radius: 20px;
+    color: #1560bd;
+}
+
+.comment h5 {
+    color: black;
+    text-decoration: underline;
+}
+
+.like-container {
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: repeat(2, 80px);
+    column-gap: 20px;
+    row-gap: 5px;
+    color: #a7c7e7;
+}
+
+.like-container button {
+    width: 100px;
+    background-color: #a7c7e7;
+    color: #1560bd;
+    box-shadow: rgba(182, 224, 243, 0.12) 0px 2px 4px 0px, rgba(164, 217, 240, 0.32) 0px 2px 16px 0px;
+}
+
+.add-comment {
+    border: 1px solid black;
+    background-color: #050589;
+    width: 500px;
+    padding: 5px;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgb(54, 10, 93);
+}
+
+.add-comment button {
+    background-color: #a7c7e7;
+    color: #1560bd;
+    border: none;
+    margin-top: 5px;
+    box-shadow: rgba(182, 224, 243, 0.12) 0px 2px 4px 0px, rgba(164, 217, 240, 0.32) 0px 2px 16px 0px;
+}
+
+.user-avatar img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: rgba(182, 224, 243, 0.12) 0px 2px 4px 0px, rgba(164, 217, 240, 0.32) 0px 2px 16px 0px;
+}
+
+.post-username {
+    color: aliceblue;
+    font-size: large;
+    margin: 10px;
+    font-family: cursive;
+
+}
+
+/* .social-card-user-heading {} */
+
+/* .user-register {
+    box-shadow: 0 0 10px 0 rgb(54, 10, 93);
+}
+
+.register-container button {
+    margin-top: 20px;
+
+} */
